# mobile_rust_demo

./: .gitignore  README.md  init.py
mobile/: Cargo.toml
mobile/src/: log.rs
ohos/: Cargo.toml  build_ohos.sh
ohos/src/: lib.rs
uniffi/: Cargo.toml  build_android.sh  build_ios_xc.sh
uniffi/mobile_ffi/: Cargo.toml  uniffi.toml
uniffi/mobile_ffi/src/: lib.rs
uniffi/uniffi-bindgen/: Cargo.toml
